--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   "scripts": {},
   "devDependencies": {
     "eslint": "^3.4.0",
+    "eslint-find-rules": "^1.13.2",
     "eslint-import-resolver-babel-module": "^2.0.1",
-    "eslint-plugin-import": "^1.15.0",
-    "eslint-plugin-flowtype": "^2.16.0"
+    "eslint-plugin-flowtype": "^2.16.0",
+    "eslint-plugin-import": "^1.15.0"
   },
   "peerDependencies": {
     "eslint": "^3.4.0",
