--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   ],
   "scripts": {},
   "devDependencies": {
+    "babel-eslint": "^6.1.2",
     "eslint": "^3.4.0",
     "eslint-find-rules": "^1.13.2",
     "eslint-import-resolver-babel-module": "^2.0.1",
@@ -26,6 +27,7 @@
     "eslint-plugin-import": "^1.15.0"
   },
   "peerDependencies": {
+    "babel-eslint": "^6.1.2",
     "eslint": "^3.4.0",
     "eslint-import-resolver-babel-module": "^2.0.1",
     "eslint-plugin-import": "^1.15.0",
