--- a/package.json
+++ b/package.json
@@ -19,29 +19,31 @@
   ],
   "files": [
     "index.js",
-    "flow.js",
-    "node.js",
-    "babel.js",
     "lib"
   ],
   "scripts": {
+    "lint": "eslint .",
     "bump-major": "npm version major -m \"Bump to %s\"",
     "bump-minor": "npm version minor -m \"Bump to %s\"",
     "bump-patch": "npm version patch -m \"Bump to %s\""
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
-    "eslint": "^3.5.0",
-    "eslint-find-rules": "^1.13.2",
-    "eslint-import-resolver-babel-module": "^2.0.1",
-    "eslint-plugin-flowtype": "^2.18.2",
-    "eslint-plugin-import": "^1.15.0"
+    "eslint": "^3.12.2",
+    "eslint-import-resolver-babel-module": "~2.2.1",
+    "eslint-plugin-flowtype": "~2.18.2",
+    "eslint-plugin-import": "~2.1.0",
+    "eslint-plugin-react": "~6.6.0"
   },
   "peerDependencies": {
-    "babel-eslint": "^6.1.2",
-    "eslint": "^3.5.0",
-    "eslint-import-resolver-babel-module": "^2.0.1",
-    "eslint-plugin-import": "^1.15.0",
-    "eslint-plugin-flowtype": "^2.18.2"
+    "babel-eslint": "^6.1.0",
+    "eslint": "^3.12.0",
+    "eslint-import-resolver-babel-module": "^2.2.0",
+    "eslint-plugin-flowtype": "^2.18.0",
+    "eslint-plugin-import": "^2.1.0",
+    "eslint-plugin-react": "^6.6.0"
+  },
+  "dependencies": {
+    "eslint-config-airbnb": "^13.0.0"
   }
 }
