--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
     "bump-patch": "npm version patch -m \"Bump to %s\""
   },
   "devDependencies": {
-    "babel-eslint": "^6.1.2",
-    "eslint": "^3.12.2",
+    "babel-eslint": "~6.1.2",
+    "eslint": "~3.12.2",
     "eslint-import-resolver-babel-module": "~2.2.1",
     "eslint-plugin-flowtype": "~2.18.2",
-    "eslint-plugin-import": "~2.1.0",
-    "eslint-plugin-react": "~6.6.0"
+    "eslint-plugin-import": "~2.1.0"
   },
   "peerDependencies": {
     "babel-eslint": "^6.1.0",
     "eslint": "^3.12.0",
+    "eslint-plugin-jsx-a11y": "^3.0.0",
     "eslint-import-resolver-babel-module": "^2.2.0",
     "eslint-plugin-flowtype": "^2.18.0",
     "eslint-plugin-import": "^2.1.0",
