--- a/package.json
+++ b/package.json
@@ -28,19 +28,18 @@
     "release": "standard-version"
   },
   "devDependencies": {
-    "eslint": "^3.18.0",
+    "eslint": "^4.3.0",
     "standard-version": "^4.2.0"
   },
   "peerDependencies": {
     "babel-eslint": "^7.1.1",
     "eslint": "^3.18.0",
-    "eslint-import-resolver-babel-module": "^2.2.1",
-    "eslint-plugin-flowtype": "^2.18.2",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.9.0"
+    "eslint-plugin-flowtype": "^2.35.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.1.0"
   },
   "dependencies": {
-    "eslint-config-airbnb": "^14.1.0"
+    "eslint-config-airbnb": "^15.1.0"
   }
 }
